<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.crash22191.calculator.MainActivity"
    android:orientation="vertical"
    android:background="@android:color/background_dark">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"

        android:layout_height="0dp"
        android:layout_weight="1.8" >

        <TextView
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/textView4"
            android:layout_weight="1"
            android:textSize="85sp"
            android:layout_gravity="right"
            android:gravity="bottom|right"
            android:focusable="false"
            android:background="#3f4a4e"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#2A363B">

        <Button
            android:text="@string/mc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/mc"
            android:layout_weight="1"
            android:textSize="25sp"
            android:textColor="#FF847C"
            android:background="?attr/selectableItemBackground"
            android:elevation="0dp"
            android:textAlignment="center" />

        <Button
            android:text="@string/mr"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/mr"
            android:layout_weight="1"
            android:textSize="25sp"
            android:background="?attr/selectableItemBackground"
            android:textColor="#FF847C"
            android:textAlignment="center" />

        <Button
            android:text="@string/pm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/plusminus"
            android:layout_weight="1"
            android:textSize="25sp"
            android:background="?attr/selectableItemBackground"
            android:textColor="#FF847C"
            android:textAlignment="center" />

        <Button
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:text="@string/plus"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="38sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"

        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#2A363B">

        <Button
            android:text="@string/mm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/mm"
            android:layout_weight="1"
            android:textSize="25sp"
            android:background="?attr/selectableItemBackground"
            android:textColor="#FF847C"
            android:textAlignment="center" />

        <Button
            android:text="@string/mp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/mp"
            android:layout_weight="1"
            android:textSize="25sp"
            android:background="?attr/selectableItemBackground"
            android:textColor="#FF847C"
            android:textAlignment="center" />

        <Button
            android:text="@string/c"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/c"
            android:layout_weight="1"
            android:textSize="25sp"
            android:background="?attr/selectableItemBackground"
            android:textColor="#FF847C"
            android:textAlignment="center" />

        <Button
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:text="@string/minus"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="42sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#2A363B">

        <Button
            android:text="@string/seven"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/seven"
            android:layout_weight="1"
            android:textSize="25sp"
            android:background="?attr/selectableItemBackground"
            android:textColor="@android:color/holo_green_light"
            android:textAlignment="center" />

        <Button
            android:text="@string/eight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/eight"
            android:layout_weight="1"
            android:textSize="25sp"
            android:background="?attr/selectableItemBackground"
            android:textColor="@android:color/holo_green_light"
            android:textAlignment="center" />

        <Button
            android:text="@string/nine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/nine"
            android:layout_weight="1"
            android:textSize="25sp"
            android:background="?attr/selectableItemBackground"
            android:textColor="@android:color/holo_green_light"
            android:textAlignment="center" />

        <Button
            android:text="@string/div"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/div"
            android:layout_weight="1"
            android:textSize="25sp"
            android:background="?attr/selectableItemBackground"
            android:textColor="#FF847C"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#2A363B">

        <Button
            android:text="@string/four"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/four"
            android:layout_weight="1"
            android:textSize="25sp"
            android:background="?attr/selectableItemBackground"
            android:textColor="@android:color/holo_green_light"
            android:textAlignment="center" />

        <Button
            android:text="@string/five"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/five"
            android:layout_weight="1"
            android:textSize="25sp"
            android:background="?attr/selectableItemBackground"
            android:textColor="@android:color/holo_green_light"
            android:textAlignment="center" />

        <Button
            android:text="@string/six"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/six"
            android:layout_weight="1"
            android:textSize="25sp"
            android:background="?attr/selectableItemBackground"
            android:textColor="@android:color/holo_green_light"
            android:textAlignment="center" />

        <Button
            android:text="@string/mul"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/mul"
            android:layout_weight="1"
            android:textSize="25sp"
            android:background="?attr/selectableItemBackground"
            android:textColor="#FF847C"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#2A363B">

        <Button
            android:text="@string/one"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/one"
            android:layout_weight="1.03"
            android:textSize="25sp"
            android:background="?attr/selectableItemBackground"
            android:textColor="@android:color/holo_green_light"
            android:textAlignment="center" />

        <Button
            android:text="@string/two"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/two"
            android:layout_weight="1"
            android:textSize="25sp"
            android:background="?attr/selectableItemBackground"
            android:textColor="@android:color/holo_green_light"
            android:textAlignment="center" />

        <Button
            android:text="@string/three"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/three"
            android:layout_weight="1.01"
            android:textSize="25sp"
            android:background="?attr/selectableItemBackground"
            android:textColor="@android:color/holo_green_light"
            android:textAlignment="center" />

        <Button
            android:text="@string/eq"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/eq2"
            android:layout_weight="1.07"
            android:background="?attr/selectableItemBackground"
            android:textColor="#2A363B"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#2A363B">

        <Button
            android:text="@string/Dot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/dot"
            android:layout_weight="1"
            android:textSize="25sp"
            android:background="?attr/selectableItemBackground"
            android:textColor="#E84A5F"
            android:textAlignment="center" />

        <Button
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/zero2"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:textColor="#2A363B"
            android:textAlignment="center" />

        <Button
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/zero"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:textColor="@android:color/holo_green_light"
            android:textSize="25sp"
            android:gravity="left|fill_vertical"
            android:textAlignment="center" />

        <Button
            android:text="@string/eq"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/eq"
            android:layout_weight="1"
            android:textSize="25sp"
            android:background="?attr/selectableItemBackground"
            android:textColor="#FF847C"
            android:gravity="top|center_vertical|center_horizontal"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>
